--- a/index.html
+++ b/index.html
@@ -41,5 +41,10 @@
         <li>Anvar: Wants to do nothing.</li>
     </ul>
 
+    <p>
+        My GitHub Pages:
+        <a href="https://deymp.github.io" target="_blank">https://deymp.github.io</a>
+    </p>
+
 </body>
 </html>
